feat: journal-entry, item-uoms
